[package]
name = "crab_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.23"
volatile = "0.2.7"
spin = { version = "0.5.2", features = [] }

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]